--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,3 +11,53 @@ body {
 
     
 }
+
+
+.nav{
+    border:1px solid #ccc;
+    border-width:1px 0;
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+}
+.nav li{
+    display:inline;
+}
+.nav a{
+    display:inline-block;
+    padding:10px;
+}
+
+
+.chapternav {
+	background-color:  #2d2d2d2d;
+	overflow: hidden;
+	padding: 0;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	position: relative;
+	text-align: center;
+	width: 100%;
+	height: 86px
+	z-index: 9987;
+}
+
+.chapternav-wrapper {
+	positon:relative;
+	height: 100%;
+	z-index: 1;
+	text-align: 1;
+	color: #ccc;
+}
+
+
+.chapternav-items{
+	margin: 0;
+	padding-left: 34px;
+	padding-right: 34px;
+	list-style: none;
+	overflow-x: auto;
+	overflow-y: hidden;
+	white-space: nowrap;
+}
